fix css, which i destroyed, put flex align back to baseline

--- a/app/styles/components/_entry-detail.scss
+++ b/app/styles/components/_entry-detail.scss
@@ -7,8 +7,7 @@
     margin-bottom: 0.6em;
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    align-items: baseline;
   }
   &__meta {
     color: $gray50;
