--- a/app/styles/components/_states-form.scss
+++ b/app/styles/components/_states-form.scss
@@ -1,5 +1,6 @@
 .btn {
   margin-top: 1em;
+  margin-left: 1em;
   width: 190.5px;
 
   &.stateActive {
